Huray test bugfix - action button in blue - keywords align

--- a/app/app/styles/_common.scss
+++ b/app/app/styles/_common.scss
@@ -113,14 +113,9 @@ button {
     transition: background-color 300ms ease-out 0s;
     opacity: 1;
     cursor: pointer;
-
-    background: rgb(64,172,236); /* Old browsers */
-    background: linear-gradient(to bottom, rgba(64,172,236,1) 1%,rgba(32,124,202,1) 100%); /* W3C */
-
+    background-color: color(5);
     &:hover, &:focus {
-        opacity: 0.7;
-        background: rgb(64,172,236); /* Old browsers */
-        background: linear-gradient(to bottom, rgba(64,172,236,1) 1%,rgba(32,124,202,1) 100%); /* W3C */
+         background-color: darken(color(5), abs($button-function-factor));
     }
 }
 
