--- a/app/app/styles/_item.scss
+++ b/app/app/styles/_item.scss
@@ -645,7 +645,10 @@ $imageSize: 80px;
 .tags {
     .tagList {
         list-style: none;
-        margin-bottom: 0px;
+        margin: {
+            bottom: 0px;
+            left: 0px;
+        }
         li {
             border: 1px solid #C2C2C2;
             border-radius: 8px;
